<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/topbar"/>
    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/btnback"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_bendungan"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:inputType="text"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebar_pintu_air"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_lebar"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:inputType="number"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/tinggi_bukan_pintu"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_tinggi"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:inputType="number"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/selisih_tinggi_air"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_selisih"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:lines="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btn_submit"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/btnsubmit"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btn_submit"
            android:background="@drawable/btndelete"
            android:textAlignment="center" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/debit" />

    <TextView
        android:id="@+id/tv_debit"
        android:layout_width="389dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:lines="1"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/btn_upload"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:background="@drawable/btnupload" />
</LinearLayout>