<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="12sp"
                android:textColor="#53B942"
                android:textStyle="italic"
                tools:text="@string/tanggal" />

            <TextView
                android:id="@+id/tv_item_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/nama_bendungan" />

            <TextView
                android:id="@+id/tv_item_debit_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_nama"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                tools:text="@string/debit_air" />

            <TextView
                android:id="@+id/tv_item_debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_nama"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/tv_item_debit_air"
                android:textStyle="bold"
                tools:text="@string/debit" />

            <ImageView
                android:id="@+id/tv_item_vector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_tanggal"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/vector" />

            <TextView
                android:id="@+id/tv_item_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_vector"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="7dp"
                android:textColor="#53B942"
                android:textSize="11sp"
                tools:text="Catatan" />
        </RelativeLayout>

        <!--<View
            android:id="@+id/tv_item_line"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:background="#90D7FF" />-->

        <ImageView
            android:id="@+id/tv_item_line"
            android:layout_width="wrap_content"
            android:layout_height="111dp"
            android:src="@drawable/line" />
    </androidx.cardview.widget.CardView>
</LinearLayout>